// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextArea should be rendered correctly 1`] = `
<DocumentFragment>
  <div
    class="container uui-input-box root uui-textarea uui-size-36 mode-form"
    tabindex="-1"
  >
    <textarea
      class="-clickable noAutoSize uui-input"
      tabindex="0"
    />
  </div>
</DocumentFragment>
`;

exports[`TextArea should be rendered with props correctly 1`] = `
<DocumentFragment>
  <div
    class="container uui-input-box root uui-textarea uui-size-36 mode-inline"
    tabindex="-1"
  >
    <textarea
      class="-clickable noAutoSize uui-input"
      maxlength="200"
      placeholder="Type here"
      rows="4"
      tabindex="0"
    />
  </div>
</DocumentFragment>
`;
